# catalog_research_agent

./: README.md  components.txt  config.py  debug_visualizer.py  evaluations.py  graph.py  main.py  models.py  nodes.py  prompt_loader.py  prompts.yaml  pyproject.toml  tools.py
evaluation_set/: evaluation_set.csv
outputs/: catalog_research_results_20250818_143759.json
